--- a/index.html
+++ b/index.html
@@ -5,47 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="styles/style.css">
-    <!-- don't forget to link your styles 
-    OK-->
   </head>
   <body>
     <section class="container">
-      <img class="iphone" src="images/phones.png" alt="iphones"> 
-      <div class="header-blue">
-        <img class="brand" src="images/brand.png" alt="brand">
-        <a href="#" class="login"><img src="images/home.png" alt="icon home"> Login</a>
-      </div>
-      <div class="text-white">
-    <h1>Capture and Share the World's Moments</h1>
-   <p> Instagram is a fast, beautiful and fun way to share your life with
-      friends and family.
-    </p>
-    <p>
-      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    </p>
-    <p>
-      Oh yeah, did we mention it's free? 
-    </p>
-    </div>
-    <div class="badges">
-    <img src="images/badge-iphone.png" alt="badge-iphone">
-    <img src="images/badge-android.png" alt="badge-android">
-  </div>
-</section> 
-  <footer>
-    <ul>
-      <li><a href="#">About us</a></li>
-      <li><a href="#">Support</a></li>
-      <li> <a href="#">Blog</a></li>
-      <li><a href="#">Press</a></li>
-      <li> <a href="#">API</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li> <a href="#">Terms</a></li>
-      <li>&copy; 2014 Instagram</li>
-    
-    </ul>
-  </footer>
+        <div>
+          <img class="iphone" src="images/phones.png" alt="iphones">
+        </div>
+      <section class="section2">
+          <div class="div1">
+            <img class="brand" src="images/brand.png" alt="brand">
+            <button type="button"><img src="images/home.png" alt="home"> Log in</button>
+          </div>
+          <article>
+            <h1>Capture and Share the World's Moments</h1>
+            <p> Instagram is a fast, beautiful and fun way to share your life with
+                  friends and family.
+            </p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p> Oh yeah, did we mention it's free? </p>
+
+            <div class="badges">
+              <img src="images/badge-iphone.png" alt="badge-iphone">
+              <img src="images/badge-android.png" alt="badge-android">
+            </div>
+          </article> 
+      </section>
+     </section> 
+
+    <footer>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Support</a></li>
+          <li> <a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li> <a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li> <a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
   </body>
 </html>
