--- a/index.html
+++ b/index.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles/style.css"/>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+   <section class = "instagramContainer">
+     <div class = "leftSide">
+      <img src="images/phones.png">
+     </div> 
+
+     <div class = "rightSide">
+       <div class = topRight>
+              <img src="images/brand.png">
+          <div class = "buttons">
+              <img src="images/home.png" alt="home">&nbsp;&nbsp;<a href="#" class="buttonLink">Log in</a>
+         </div>
+       </div>
+
+      <div class = "text">
+        <h1>Capture and share <br> the World's moments</h1>
+
+            <p> 
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+           </p>
+            <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. 
+           </p>
+            <p>
+          Oh yeah, did we mention it's free?
+            </p>
+
+
+      </div>
+
+
+      <div class = "botButtons">
+        <a href="#" class="app-link-btn"><img src="images/badge-iphone.png"></a>
+        <div class = "divider"></div>
+          <a href="#" class="app-link-btn"><img src="images/badge-android.png"></a>
+          </div>
+
+
+
+     </div>
+
+
+
+
+
+   
+  </section>
+
+    <div class="footer">
+      About&nbsp;&nbsp; Us&nbsp;&nbsp;Support&nbsp;&nbsp;Blog&nbsp;&nbsp;Press&nbsp;&nbsp;API&nbsp;&nbsp;Jobs&nbsp;&nbsp; Privacy&nbsp;&nbsp; Terms&nbsp;&nbsp;
+      &nbsp; <span class="copyright">&copy; 2014 Instagram<span>
+    </div>
+
+  
   </body>
 </html>
