--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
      <div class = "rightSide">
        <div class = topRight>
               <img src="images/brand.png">
-          <div class = "buttons">
-              <img src="images/home.png" alt="home">&nbsp;&nbsp;<a href="#" class="buttonLink">Log in</a>
+          <div class = "button">
+              <img src="images/home.png">&nbsp;&nbsp;<a href="#" class="buttonLink">Log in</a>
          </div>
        </div>
 
@@ -41,7 +41,7 @@
 
       <div class = "botButtons">
         <a href="#" class="app-link-btn"><img src="images/badge-iphone.png"></a>
-        <div class = "divider"></div>
+        <div class = "buttonDivisor"></div>
           <a href="#" class="app-link-btn"><img src="images/badge-android.png"></a>
           </div>
 
@@ -58,7 +58,7 @@
 
     <div class="footer">
       About&nbsp;&nbsp; Us&nbsp;&nbsp;Support&nbsp;&nbsp;Blog&nbsp;&nbsp;Press&nbsp;&nbsp;API&nbsp;&nbsp;Jobs&nbsp;&nbsp; Privacy&nbsp;&nbsp; Terms&nbsp;&nbsp;
-      &nbsp; <span class="copyright">&copy; 2014 Instagram<span>
+      &nbsp; <span class="copyrightDate">&copy; 2014 Instagram<span>
     </div>
 
   
