--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <img src="/images/brand.png" alt="Instagram">
+      <button class="btn">
+        <div id="btn_container"><img src="/images/home.png" width="20" height="20" /></div>
+        <span>Log in</span>
+      </button>
+    </header> 
+    <div>
+      <img src="images/phones.png" alt="mobile phones">
+    </div>
+    <div>
+      <h1>
+      Capture and Share the World's Moments
+      </h1>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family. 
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+        Oh yeah, did we mention it's free?
+        </p>
+    </div>
+    <div>
+      <input type="image" src="/images/badge-iphone.png" name="submit"
+      height ="40" width="150" alt="Download on the App Store">
+      <input type="image" src="/images/badge-android.png" name="submit" height="40" width="150"
+      alt="Get it on Google Play"> 
+    </div>
+    <footer>
+      <lu>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </lu>
+      <div>&copy; 2014 Instagram</div>
+    </footer> 
   </body>
 </html>
