--- a/index.html
+++ b/index.html
@@ -4,13 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css"/> <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+
+              <!-- HEADER -->
+      <section class="container1">
+
+    <div>
+    <img src="images/phones.png" alt="phones"/>
+    </div>
+
+    <section class="container2">
+      <div class="">
+        <div class="items">
+    <img src="images/brand.png" alt="logo-ig"/>
+
+    <button class="button">
+    <img src="images/home.png" alt ="home" />
+      <h4 class="log-in">Log in</h4>
+    </button>
+      </div>
+
+      <div class ="items2">
+      <h2> Capture and Share the World's Moments Instagram </h2>
+
+        <p class="p"> Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+          friends and family. </p>
+
+        <p class="p"> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+        <p class=p> Oh yeah, did we mention it's free? </p>
+          <div class="download">
+        <img src="images/badge-iphone.png" alt="download-app-store"/>
+        <img src="images/badge-android.png" alt ="download-google-play"/>
+      </div>
+      </div>
+      </div>
+      </section>
+      </section>
+       <!-- FOOTER  -->
+        <footer class="footer">
+          <ul class="footer">
+            <li class="nav-footer">About Us </li>
+            <li class="nav-footer"> Support </li>
+            <li class="nav-footer"> Blog </li>
+            <li class="nav-footer"> Press </li>
+            <li class="nav-footer"> API </li>
+            <li class="nav-footer"> Jobs </li>
+            <li class="nav-footer"> Privacy </li>
+            <li class="nav-footer"> Terms </li>
+            <li class="nav-footer ig-grey"> &copy; 2014 Instagram </li>
+          </ul>
+        </footer>
+
+
+
+    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
