style content section, footer, logos and images

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div id="logo-plus-content">
         <div id="logo-plus-btn">
           <img src="images/brand.png" alt="instagrams logo">
-          <button>Log in</button>
+          <button><img src="images/home.png" alt="home logo">Log in</button>
         </div>
         <div id="explanation-text">
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
+          <p>Instagram is a <span class="bold-text">fast</span>, <span class="bold-text">beautiful</span> and <span class="bold-text">fun</span> way to share your life with
             friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
