--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="logo-plus-content">
         <div id="logo-plus-btn">
           <img src="images/brand.png" alt="instagrams logo">
-          <button><img src="images/home.png" alt="home logo">Log in</button>
+          <button type="button"><img src="images/home.png" alt="home logo">Log in</button>
         </div>
         <div id="explanation-text">
           <h1>Capture and Share the World's Moments</h1>
