--- a/index.html
+++ b/index.html
@@ -3,14 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="styles/style.css"
+      media="screen"
+    />
+
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="container">
+      <div>
+        <img id="phone-image" src="images/phones.png" />
+      </div>
+
+      <div>
+        <div class="logo-row">
+          <a target="_blank" href="https://www.instagram.com/">
+            <img id="logo-image" src="images/brand.png" />
+          </a>
+
+          <a target="_blank" href="https://www.calvintorra.com">
+            <div id="log-in-button">
+              <img id="home-image" src="images/home.png" />
+              <p>Log in</p>
+            </div>
+          </a>
+        </div>
+
+        <div id="white-frame">
+          <div id="frame-title">
+            <h1>Capture and Share</h1>
+            <h1>the World's Moments</h1>
+          </div>
+
+          <div class="content">
+            <p>
+              Instagram is a <strong>fast, beautiful</strong> and
+              <strong>fun</strong> way to share your life with friends and
+              family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+
+          <div id="download-buttons">
+            <a target="_blank" href="https://www.instagram.com/">
+              <img src="images/badge-iphone.png" alt="app-store" />
+            </a>
+            <a target="_blank" href="https://www.instagram.com/">
+              <img src="images/badge-android.png" alt="google-play" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <p>
+        <a target="_blank" href="https://www.calvintorra.com">About Us</a>
+        <a target="_blank" href="https://www.calvintorra.com">Support</a>
+        <a target="_blank" href="https://www.calvintorra.com">Blog</a>
+        <a target="_blank" href="https://www.calvintorra.com">Press</a>
+        <a target="_blank" href="https://www.calvintorra.com">API</a>
+        <a target="_blank" href="https://www.calvintorra.com"></a>
+        <a target="_blank" href="https://www.calvintorra.com">Jobs</a>
+        <a target="_blank" href="https://www.calvintorra.com">Privacy</a>
+        <a target="_blank" href="https://www.calvintorra.com">Terms</a>
+        &copy; 2014 Instagram
+      </p>
+    </div>
   </body>
 </html>
