--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="first-section">
+      <div class="mobile-app">
+        <img src="/images/phones.png" alt="">
+      </div>
+
+      <div class="logo-and-text">
+            <div class="images">
+              <img class="logo" src="/images/brand.png" alt="instagram logo">
+              <a class="login-button" href="https://www.instagram.com//" target="_blank">
+                <img class="login-user" src="/images/home.png" alt="login icon">
+                <span>Log in</span>
+              </a>
+            </div>
+            <div class="text-intro">
+                <h2>Capture and Share<br /> the World's Moments</h2>
+                <p>Instagram Capture and Share the World's Moments Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+                  friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                </p>
+                <p>Oh yeah, did we mention it's free?</p>
+                <a href="https://apps.apple.com/es/app/instagram/id389801252" target="_blank"><img src="/images/badge-iphone.png" alt="download app store"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es&gl=US" target="_blank"><img src="/images/badge-android.png" alt="download google play"></a>
+            </div>
+      </div>
+    </div>
+    <footer id="footer">
+      <nav class="footer-menu">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>       
   </body>
 </html>
