--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class="container">
+      <section class="intro">
+        <aside>
+          <img src="images/phones.png" alt="Phones with instragram"/>
+        </aside>
+        <article class="intro-content">
+          <nav class="intro-nav">
+            <h1 class="d-none">Instagram</h1>
+            <img src="images/brand.png" alt="Instagram logo"/>
+            <a href="" class="button"><img src="images/home.png" alt="home icon" class="icon"/>Login</a>
+          </nav>
+          <div class="card">
+            <h2>Capture and Share<br/>the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Oh yeah, did we mention it's free?</p>
+            <nav class="badges">
+              <a href="" class="badge"><img src="images/badge-iphone.png"/></a>
+              <a href="" class="badge"><img src="images/badge-android.png"/></a>
+            </nav>
+          </div>
+          
+        </article>
+      </section>
+      <footer class="footer">
+        <nav>
+          <ul>
+            <li><a href="" class="link">About Us</a></li>
+            <li><a href="" class="link">Support</a></li>
+            <li><a href="" class="link">Blog</a></li>
+            <li><a href="" class="link">Press</a></li>
+            <li><a href="" class="link">API</a></li>
+            <li><a href="" class="link">Jobs</a></li>
+            <li><a href="" class="link">Privacy</a></li>
+            <li><a href="" class="link">Terms</a></li>
+            <li><span class="text-muted">&copy; 2014 Instagram</span></li>
+          </ul>
+        </nav>
+      </footer>
+    </main>
   </body>
 </html>
