--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="container-1">
+      <div>
+        <img src="./images/phones.png" alt="smartphone" />
+      </div>
+      <div>
+        <img src="./images/brand.png" alt="instalogo" />
+        <img src="./images/home.png" alt="homesymbol" />
+        <button>Log in</button>
+      </div>
+    </section>
+    <section class="container-2">
+      <article>
+        <h1>
+          Capture and Share<br />
+          the World's Moments
+        </h1>
+        <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your
+          life with friends and family. <br />
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look <br />
+          and feel, then post to Instagram &mdash; it's that easy. You can
+          <br />
+          even share to Facebook, Twitter, Tumblr and more. It's a <br />
+          new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <div class="play-stores">
+        <img src="./images/badge-iphone.png" alt="appstore" />
+        <img src="./images/badge-android.png" alt="playstore" />
+      </div>
+    </section>
+    <footer>
+      <div>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+        <h4>&copy; 2014 Instagram</h4>
+      </div>
+    </footer>
   </body>
 </html>
