--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="container">
+      <img src="images/phones.png" alt="iphone">
+      <div class="info-container">
+        <div id="header">
+          <img src="images/brand.png" alt="logo instagram">
+          <button><img src="images/home.png" alt="Home"><a href="#">Log in</a></button>
+        </div>
+        <div class="text-container">
+          <div class="text">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <article> Instagram is a <strong>fast, beautiful </strong>and <strong>fun</strong> way to share your life with friends and family. <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p><p>Oh yeah, did we mention it's free?</p></article>
+            <div class="store-icons">
+              <img src="images/badge-iphone.png" alt="badge-iphone">
+              <img src="images/badge-android.png" alt="badge-android">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!--       FOOOTER         -->
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li id="copy">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
   </body>
 </html>
