--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="styles/style.css" />
+   
   </head>
 
   <body>
@@ -27,8 +28,9 @@
       <h2 class="text title">Capture and Share the World's Moments</h2> 
     
       <p class="text">
-        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <!-- Need to know why my strong labels are not working in the page, words don´t look bold-->
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
         Oh yeah, did we mention it's free?
       </p>
 
