--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 
      <div class = "rightSide">
        <div class = topRight>
+        <a href="#"><div>
               <img src="images/brand.png">
-          <div class = "button">
-              <img src="images/home.png">&nbsp;&nbsp;<a href="#" class="buttonLink">Log in</a>
-         </div>
+            </div>
+          </a>
+              <a href="#">
+          <div class = "buttonCss">
+             <img src="images/home.png">&nbsp;&nbsp;<a href="#" class="buttonLink">Log in</a>
+         </div></a>
+         
        </div>
 
       <div class = "text">
