--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="styles/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <section class="index">
+      <div class="image">  
+            <img src="images/phones.png" alt="smartphones"></img>  
+          </div>
+          <div class="main">
+            <div class="panel-header">
+        <div>
+        <img src="images/brand.png" alt="Instagram"></img>
+        </div>  
+        <button class="button"><img src="images/home.png"></img> Log in
+        </button>
+        </div>
+        <div class="text-container">
+          <div class="text-intro">
+        <h1>Capture and Share </br>the World's Moments</h1> 
+        <p>Instagram is a <strong>fast, beautiful</strong> and a <strong>fun</strong> way to share your life with
+        friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="badges"></div>
+    <img src="images/badge-android.png"> 
+    <img src="images/badge-iphone.png">
+      </div>
+    </div>
+  </div>
+</section>
+<footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+</footer>
+</body>
 </html>
