Added code to index and style files

--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section class="hero">
+      <div class="div-phones">
+        <img class="img-phones" src="images/phones.png" alt="Phones using Instagram">
+      </div>
+
+      <div class="div-description">
+        <div class="logo-button">
+          <img src="images/brand.png" alt="Instagram Logo">
+          <button class="home-button"><img src="images/home.png" alt="Home Icon">Log in</button>
+        </div>
+
+        <div class="capture-share">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+
+        <div class="shops-buttons">
+          <img src="images/badge-iphone.png" alt="Get it on Apple Store button">
+          <img src="images/badge-android.png" alt="Get it on Google Play">          
+        </div>
+      </div>
+
+    </section>
+
+    <footer>
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <a href="">&copy; 2014 Instagram</a>
+    </footer>
+
   </body>
 </html>
+
+
+
+
