completed the exercise

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <main>
       <section class="header">
         <img src="images/brand.png" alt="instagram logo">
-        <div class="loginBtn">
+        <a href="#" class="loginBtn">
           <img src="images/home.png" alt="home icon">
-          <p>Log in</p>
-        </div>
+          Log in
+        </a>
       </section>
       <section class="copy">
-        <h1>Capture and Share the World's Moments</h1>
+        <h1>Capture and Share <br>the World's Moments</h1>
         <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
-        <img src="images/badge-iphone.png" alt="download it on the app store">
-        <img src="images/badge-android.png" alt="download on google play" >
+        <a href="#"><img src="images/badge-iphone.png" alt="download it on the app store"></a>
+        <a href="#"><img src="images/badge-android.png" alt="download on google play" ></a>
       </section>
     </main>
     <nav>
