--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="gradientDiv">
+      <section class="leftVerticalSection">
+          <img id="phone" src="images/phones.png" alt="Iphone">
+      </section>
+      <section class="rightVerticalSection">
+        <div class="logIn">
+          <img id="instagramLogo" src="images/brand.png" alt="Instagram Logo">
+          <div class="divLogin">
+            <img id="home" src="images/home.png" alt="Home">
+            <p>Log in</p>
+          </div>
+        </div>
+        <div class="textDiv">
+          <article id="mainArticle">
+            <h3>Capture and Share  <br> the World's Moments</h3>
+            <p id="mainParagraph">
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong>  and <strong>fun</strong>  way to share your life with
+              friends and family.
+            <br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            <br>
+            Oh yeah, did we mention it's free?
+            </p>
+            <div>
+            <img src="images/badge-iphone.png" alt="iOS Download">
+            <img id="downloadAndroid" src="images/badge-android.png" alt="Android Download">
+          </div>
+          </article>
+        </div>
+      </section>
+    </div>
+      <footer  class="mainFooter">
+        <a href="#">ABOUT US</a>
+        <a href="#">SUPPORT</a>
+        <a href="#">BLOG</a>
+        <a href="#">PRESS</a>
+        <a href="#">API</a>
+        <a href="#">JOBS</a>
+        <a href="#">PRIVACY</a>
+        <a href="#">TERMS</a>
+        <a id="copyRightIg" href="#">&copy; 2014 INSTAGRAM</a>
+      </footer>
   </body>
 </html>
