--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="instagram">
+      <div class="container">
+        <div class="instagram-block">  
+          <div id="instagram-block-img"></div>
+          <div id="instagram-block-info">
+            <div id="instagram-block-info_header">
+              <img src="./images/brand.png" alt="">
+              <button>Log in</button>
+            </div> 
+            <div id="instagram-block-info_text">
+              <p class="title">Capture and Share the World's Moments</p>
+              <p class="text">Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+                friends and family.</p>
+              <p class="text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p class="text">Oh yeah, did we mention it's free?</p>
+              <div id="instagram-block-info_apps">
+                <img src="./images/badge-iphone.png" alt="">
+                <img src="./images/badge-android.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+         
+        <footer>
+          <a href="#">ABOUT US</a>
+          <a href="#">SUPPORT</a>
+          <a href="#">BLOG</a>
+          <a href="#">PRESS</a>
+          <a href="#">API</a>
+          <a href="#">JOBS</a>
+          <a href="#">PRIVACITY</a>
+          <a href="#">TERMS</a>
+          <span>&copy; 2014 Instagram </span>
+        </footer>
+      </div>
+    </section>
   </body>
 </html>
