HTML and CSS added. However, still having trouble with the page when it resizes. Log in button still doesn't look right, and unsure how to get it to be less tall.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<!--Photo Landing-->
+    <section class="phones-section">
+      <img class="phones-image" src="images/phones.png" alt="Images of Phones">
+    </section>
+  
+  <main>  
+<!--Header-->
+    <section class="heading">
+      <img class="instagram-logo" src="images/brand.png" alt="Instagram Logo and Name">
+      
+      <a href="#" class="login">
+        <img class="home-icon" src="./images/home.png" alt="Home Icon">
+        <p>Log in</p>
+      </a>
+    </section>   
+    
+<!--Main Copy-->
+    <section class="main-copy">
+      <h1 class="body-title">Capture and Share<br>the World's Moments</h1>
+      <p class="body-copy">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+      friends and family.
+      <p class="body-copy">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p> 
+      <a href="#"><img class="App-Store" src="images/badge-iphone.png" alt="App Store Button"></a>
+      <a href="#"><img class="Play-Store" src="images/badge-android.png" alt="Play Store Button"></a>
+    </section>
+  </main>
+  
+<!--Navigation Footer-->
+  <nav>
+    <ul class="nav-links">
+      <li><a href="#">About Us</a></li> 
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul> 
+  </nav>
   </body>
 </html>
+
