--- a/index.html
+++ b/index.html
@@ -16,23 +16,20 @@
       <main>
         <div id="head-logo">
           <img src="images/brand.png" alt="insta-logo">
-          <button> <img src="images/home.png" alt=""><span>Log in</span></button>
+          <button> 
+            <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </button>
         </div>
         <article>
-          <h1>Instagram Capture and Share the World's Moments</h1> 
-          <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <h1>Capture and Share the World's Moments</h1> 
+          <p> Instagram is a <b> fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
           <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p> Oh yeah, did we mention it's free?</p> 
         </article>
         <div id="download-container">
-          <div class="download-area">
-            <img src="images/badge-iphone.png" alt="App store logo">
-            <p>Download on the App Store</p>
-          </div>
-          <div class="download-area"> 
-            <img src="images/badge-android.png" alt="Google play logo">
-            <p>Get it on Google Play</p>
-          </div> 
+          <img src="images/badge-iphone.png" id="apple" alt="App store logo">
+          <img src="images/badge-android.png" id="google" alt="Google play logo">
         </div>
       </main>
     </div>
