--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div class="landing">
+    <div class="top-section"></div>
+    <div class="main-container">
+      <div class="phones">
+        <!-- <img src="images/phones.png" alt=""> -->
+      </div>
+      <div class="right-block">
+        <div class="logo-section">
+          <div>
+            <img src="images/brand.png" alt="">
+          </div>
+          <div><img src="images/home.png" alt=""></div>
+        </div>
+        <div class="frame">
+          <h2>Capture and Share the World's Moments</h2>
+          <div class="about">
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free? </p>
+          </div>
+          <div class="appstore-icons">
+            <img src="/images/badge-iphone.png" alt="">
+            <img src="/images/badge-android.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="light-gray">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div> About Us Support Blog Press API
+  Jobs Privacy Terms &copy; 2014 Instagram
+</body>
+
 </html>
