--- a/index.html
+++ b/index.html
@@ -7,37 +7,38 @@
     <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    <header>
-      <img src="/images/brand.png" alt="Instagram">
-      <button class="btn">
-        <div id="btn_container"><img src="/images/home.png" width="20" height="20" /></div>
-        <span>Log in</span>
-      </button>
-    </header> 
-    <div>
-      <img src="images/phones.png" alt="mobile phones">
-    </div>
-    <div>
+    <div0>
+        <div1>
+          <img src="images/phones.png" alt="mobile phones">
+        </div1>
+        <div2>
+          <div3>
+          <img src="/images/brand.png" alt="Instagram">
+          <button class="login-btn" src="/images/home.png">Log in</button> 
+          </div3>
+          <div4>
+            <img src="images/frame.png">
       <h1>
       Capture and Share the World's Moments
       </h1>
         <p>
           Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
-          friends and family. 
-        </p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          friends and family. </p>
+          <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
         </p>
         <p>
-        Oh yeah, did we mention it's free?
+          Oh yeah, did we mention it's free?
         </p>
-    </div>
-    <div>
-      <input type="image" src="/images/badge-iphone.png" name="submit"
-      height ="40" width="150" alt="Download on the App Store">
-      <input type="image" src="/images/badge-android.png" name="submit" height="40" width="150"
-      alt="Get it on Google Play"> 
-    </div>
+        </div4>
+        <div5>
+          <input class="btn" type="image" src="/images/badge-iphone.png" name="submit" height="40" width="150"
+            alt="Download on the App Store">
+          <input class="btn" type="image" src="/images/badge-android.png" name="submit" height="40" width="150" alt="Get it on Google Play">
+        </div5>
+        </div2>
+    </div0>
     <footer>
       <lu>
         <li>About Us</li>
