--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-container">
+
+      <div class="container">
+
+        <img class="instagram" src="../images/brand.png"alt="Instagram">
+        <h1>Capture and Share the World's Moments </h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?</p>
+        
+        <div class="badges">
+          <img src="../images/badge-iphone.png" alt="Download on the App Store">
+          <img src="../images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+      <img class="phone" src="../images/phones.png" alt="phone">
+    </div>
+
+    <div class="footer">
+      <ul class="list">
+        <li class="list-items">About Us</li>
+        <li class="list-items">Support </li>
+        <li class="list-items">Blog</li>
+        <li class="list-items">Press</li>
+        <li class="list-items">API</li>
+        <li class="list-items">Jobs</li>
+        <li class="list-items">Privacy</li>
+        <li class="list-items">Terms</li>
+        <li class="trademark">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+ 
   </body>
 </html>
