--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <div class="box"></div>
+    <section class="container-principal">
+      <img class="phone" src="images/phones.png" alt="phones">
+      <img class="brand" src="images/brand.png" alt="brand">
+      <div class="box-home">
+        <img class="home" src="images/home.png" alt="home">
+        <p class="login">Log in</p>
+      </div>
+      <div class="box_principal">
+        <img class="frame" src="images/frame.png" alt="frame">
+        <h1 class="title">Capture and Share<br> the World's Moments</h1>
+        <p class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life<br> with
+        friends and family.</p>
+        <p class="text2">Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram
+        &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.</p>
+        <p class="text3">Oh yeah, did we mention it's free?</p>
+        <img class="ios" src="images/badge-iphone.png" alt="ios">
+        <img class="android" src="images/badge-android.png" alt="android">
+      </div>
+      <footer class="menu">
+        <p class="menu-1"><b>About Us &nbsp;&nbsp; Support &nbsp;&nbsp; Blog &nbsp;&nbsp; Press &nbsp;&nbsp; API &nbsp;&nbsp; Jobs &nbsp;&nbsp; Privacy &nbsp;&nbsp; Terms</b></p>
+        <p class="menu-2"><b>&copy; 2014 Instagram</p>
+      </footer>
+    </section>
 </html>
