--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="containerParent">
+      <span>
+        <img id="phones" src="/7.lab-css-instagram-clone/images/phones.png"/>
+      </span>
+      <div id="rest-information">
+        <div id="logo-instagram">
+          <img src="./images/brand.png"/>
+          <button id="button">
+            <img src="/7.lab-css-instagram-clone/images/home.png"/>
+            <p id="login">Log in</p>
+          </button>
+        </div>
+        <div id="container-text">
+          <h1 id="h1">Capture and Share<br> the World's Moments</h1>
+          <p id="p">
+            Instagram is a <strong>fast, beautiful and fun way</strong> to share your life<br>
+            with friends and family.<br>
+            <br>Take a picture or video, choose a filter to transform its look<br>
+            and feel, then post to Instagram &mdash; it's that easy. You can<br>
+            even share to Facebook, Twitter, Tumblr and more. It's a <br>
+            new way to see the world.<br>
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div id="container-app">
+          <img class="button-app" src="/7.lab-css-instagram-clone/images/badge-iphone.png"/>
+          <img class="button-app" src="/7.lab-css-instagram-clone/images/badge-android.png"/>
+        </div> 
+      </div>
+    </div>
   </body>
+  <footer class="footer">
+    <p><strong>ABOUT US SUPPORT BLOG PRESS API JOBS PRIVACY TERMS</strong><span id="footer-final"> &copy; 2014 Instagram</span></p> 
+  </footer>
 </html>
+
