--- a/index.html
+++ b/index.html
@@ -4,13 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="hero">
+      <div class="container">
+        <figure class="hero-img">
+          <img src="/images/phones.png" alt="" />
+        </figure>
+        <div class="hero-content">
+          <div class="hero-top">
+            <img src="/images/brand.png" />
+            <a href="/" class="login-btn">
+              <img src="/images/home.png" />
+              <span>Log in</span>
+            </a>
+          </div>
+          <div class="hero-card">
+            <div class="hero-top hero-top-sm">
+              <img src="/images/brand-sm.png" />
+              <a href="/" class="login-btn">
+                <img src="/images/home.png" />
+                <span>Log in</span>
+              </a>
+            </div>
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="hero-card-footer">
+              <a href="/">
+                <img
+                  src="/images/badge-iphone.png"
+                  alt="Download on the App Store"
+                />
+              </a>
+              <a href="/">
+                <img
+                  src="/images/badge-android.png"
+                  alt="Get it on Google Play"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="copyright">2014 Instagram &copy;</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
