Estrutura do HTML modificada e CSS de posicionamento iniciado

--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue-body"></div>
+    <div class="hero">
+      <img src="./images/phones.png" alt="" class="phones" />
+      <div class="main">
+        <div class="log-div">
+          <img src="images/brand.png" />
+          <img src="images/home.png" class="home-btn" />
+        </div>
+        <div class="frame-container">
+          <h2>Capture and Share the World's Moments</h2>
+          <div>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+            share your life with friends and family. Take a picture or video,
+            choose a filter to transform its look and feel, then post to
+            Instagram &mdash; it's that easy. You can even share to Facebook,
+            Twitter, Tumblr and more. It's a new way to see the world. Oh yeah,
+            did we mention it's free? Download on the App Store Get it on Google
+            Play
+          </div>
+        </div>
+        <div>
+          <img src="./images/badge-iphone.png" />
+          <img src="images/badge-android.png" />
+        </div>
+      </div>
+    </div>
+
+    <img src="./images/bgtile.png" />
+    <div>
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </div>
   </body>
 </html>
