--- a/index.html
+++ b/index.html
@@ -3,14 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header class="header">
+        <div id="cel-phone">
+          <figure>
+            <img src="./images/phones.png" alt="foto Cel phones">
+          </figure>
+        </div>
+        <div id="logotipo">
+          <figure>
+            <img src="./images/brand.png" alt="logotipo do instagram">
+          </figure>
+        </div>
+        <div id="button-login">
+          <button>
+            <img src="./images/home.png" alt="botao da home de login">
+            Log in
+          </button>
+        </div>
+    </header>
+    <!--
+    <section>
+      <div>
+        <h1>Capture and Share the World's Moments</h1>
+      </div>
+
+      <div>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+          the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div>
+        
+            <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
+            <a href="#"><img src="./images/badge-android.png" alt=""></a>
+      </div>
+    </section>
+  
+    <footer class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li> 
+        <li>API</li> 
+        <li>Jobs</li> 
+        <li>Privacy</li> 
+        <li>Terms</li>
+      </ul>
+           &copy; 2014 Instagram
+    </footer>
+  -->
   </body>
 </html>
