CSS applied to HTML structure

--- a/index.html
+++ b/index.html
@@ -7,38 +7,42 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
-    <section>
-      <div class="header">
-        Instagram
-        Log in
-      </div>
-    </section>
-    <section>
-      <div class="info">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <div class="download-apps">
-          <div>Download on the App Store</div>
-          <div>Get it on Google Play</div>
+      <section>
+        <div class="header-background">
+          <div class="logo">
+            <img src="./images/brand.png" alt="Instagram logo">
+          </div>
+          <div class="login-button">
+            <img src="./images/home.png" alt="Home icon">
+            <a>Log in</a>
+          </div>
         </div>
-      </div>
-    </section>
-    <section>
-      <div class="footer">
-         <ul>
-           <li>About Us</li>
-            <li>Support</li>
-            <li>Blog</li>
-            <li>Press</li>
-            <li>API</li>
-            <li>Jobs</li>
-            <li>Privacy</li>
-            <li>Terms</li>
-            <li class="lighter-li">&copy; 2014 Instagram</li>
-        </ul>
-      </div>
-    </section>
+      </section>
+      <section class="main">
+        <div class="image">
+          <img src="./images/phones.png" alt="Phone screen images">
+        </div>
+        <div class="description">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <a><img src="./images/badge-iphone.png" alt="Get it on App Store"></a>
+          <a><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+      </section>
+      <section>
+        <div class="footer">
+            <a>ABOUT US</a>
+            <a>SUPPORT</a>
+            <a>BLOG</a>
+            <a>PRESS</a>
+            <a>API</a>
+            <a>JOBS</a>
+            <a>PRIVACY</a>
+            <a>TERMS</a>
+            <a id="lighter">&copy; 2014 Instagram</a>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
